--- a/content/post/20230108_st_moritz.md
+++ b/content/post/20230108_st_moritz.md
@@ -8,6 +8,6 @@ tags = ["skiing","switzerland"]
 
 # St. Moritz
 
-I traveled to St. Moritz for a quick ski trip in early January 2023. Much has been written about the destination, and much can be easily discovered through the usual tools for finding information on the World Wide Web. But if you want to see my (sparse and not particularly useful) notes, [here they are](https://docs.google.com/document/d/1gA-YeZjsPQ2yW5RyN_cXtltzSBUjlaW-WMst0X_KgR4/edit?usp=sharing).
+I traveled to St. Moritz for a (very brief) ski trip in early January 2023. Much has been written about the destination, and much can be easily discovered through the usual tools for finding information on the World Wide Web. But if you want to see my (sparse and not particularly useful) notes, [here they are](https://docs.google.com/document/d/1gA-YeZjsPQ2yW5RyN_cXtltzSBUjlaW-WMst0X_KgR4/edit?usp=sharing).
 
 This is a publicly accessible Google Document. You can share it with anyone you wish, although it's not clear why you would.
