--- a/content/post/20190901_pct.md
+++ b/content/post/20190901_pct.md
@@ -1,6 +1,7 @@
 +++
 title = "Pacific Crest Trail"
 date = 2019-09-01
+description = "Blog posts from my hike in 2019. Mostly incoherent and unhinged. Nice photos though"
 [taxonomies]
 categories = ["adventures"]
 tags = ["hiking","pct"]
