--- a/content/post/20230107_zermatt.md
+++ b/content/post/20230107_zermatt.md
@@ -1,6 +1,7 @@
 +++
 title = "Zermatt"
 date = 2023-01-07
+description = "Notes from my solo trip to go skiing in Zermatt, Switzerland."
 [taxonomies]
 categories = ["adventures"]
 tags = ["skiing","switzerland"]
