--- a/content/post/20230108_st_moritz.md
+++ b/content/post/20230108_st_moritz.md
@@ -1,6 +1,7 @@
 +++
 title = "St. Moritz"
 date = 2023-01-08
+description = "Notes from my solo trip to go skiing in St. Moritz, Switzerland."
 [taxonomies]
 categories = ["adventures"]
 tags = ["skiing","switzerland"]
